feat(i18n): add language switcher component to main view.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,8 @@
         {{ option.label | translate }}
       </a>
     }
+    |
+    <app-language-switcher/>
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet/>
