feat(courses): implement course create and edit component.

--- a/src/app/learning/components/course-create-and-edit/course-create-and-edit.component.html
+++ b/src/app/learning/components/course-create-and-edit/course-create-and-edit.component.html
@@ -1,1 +1,15 @@
-<p>course-create-and-edit works!</p>
+<h2>{{ editMode ? 'Edit Course' : 'New Course' }}</h2>
+<div class="form-section">
+  <form #courseForm="ngForm" (submit)="onSubmit()" class="form-row">
+    <mat-form-field id="title-form-field">
+      <input [(ngModel)]="course.title" matInput name="title" placeholder="Title" required>
+    </mat-form-field>
+    <mat-form-field id="description-form-field">
+      <input [(ngModel)]="course.description" matInput name="description" placeholder="Description" required>
+    </mat-form-field>
+    <ng-container>
+      <button mat-raised-button color="primary">{{ isEditMode() ? 'Update' : 'Add' }}</button>
+      <button (click)="onCancel()" color="warn" mat-raised-button>Cancel</button>
+    </ng-container>
+  </form>
+</div>
