--- a/src/app/learning/pages/course-management/course-management.component.html
+++ b/src/app/learning/pages/course-management/course-management.component.html
@@ -1,1 +1,16 @@
-<p>course-management works!</p>
+<div class="table-wrapper">
+  <h1>Courses</h1>
+  <app-course-create-and-edit
+    (cancelRequested)="onCancelRequested()"
+    (courseAddRequested)="onCourseAddRequested($event)"
+    (courseUpdateRequested)="onCourseUpdateRequested($event)"
+    [course]="courseData"
+    [editMode]="editMode"/>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Id">ID</th>
+      <td mat-cell *matCellDef="let course">{{ course.id }}</td>
+    </ng-container>
+  </table>
+</div>
+
