--- a/src/app/learning/pages/course-management/course-management.component.html
+++ b/src/app/learning/pages/course-management/course-management.component.html
@@ -11,6 +11,26 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Id">ID</th>
       <td mat-cell *matCellDef="let course">{{ course.id }}</td>
     </ng-container>
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Title"> Title</th>
+      <td mat-cell *matCellDef="let course"> {{ course.title }}</td>
+    </ng-container>
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Description"> Description
+      </th>
+      <td mat-cell *matCellDef="let course"> {{ course.description }}</td>
+    </ng-container>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Actions</th>
+      <td mat-cell *matCellDef="let course">
+        <a (click)="onEditItem(course)" href="javascript:void(0)"><mat-icon>edit</mat-icon></a>
+        <a (click)="onDeleteItem(course)" href="javascript:void(0)"><mat-icon>delete</mat-icon></a>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+    <tr *matRowDef="let row; columns: columnsToDisplay;"
+        [ngClass]="{ 'editable-row': courseData && courseData.id === row.id }" mat-row></tr>
   </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="5" showFirstLastButtons></mat-paginator>
 </div>
 
